--- a/bibleTodo/src/main/resources/static/index.html
+++ b/bibleTodo/src/main/resources/static/index.html
@@ -48,7 +48,7 @@
 	<hr>
 	
 	<h1>회원가입</h1>
-	<form action="/home" method="post">
+	<form action="/index" method="post">
 		<label for="user_id2">아이디 : </label> <input type="text" id="user_id2"
 			name="user_id" /><br> <label for="user_pw2">비밀번호 : </label> <input
 			type="password" id="user_pw2" name="user_pw" /><br> <label
