--- a/bibleTodo/src/main/resources/static/index.html
+++ b/bibleTodo/src/main/resources/static/index.html
@@ -38,10 +38,11 @@
 	<br>
 	<hr>
 	<h1>로그인</h1>
-	<form action="signIn" method="post">
-		<label for="user_id1">아이디: </label> <input type="text" id="user_id1"
-			name="user_id"> <label for="user_pw1">비밀번호: </label> <input
-			type="password" id="user_pw1" name="user_pw">
+	<form action="/" method="post">
+		<label for="user_id1">아이디: </label> 
+		<input type="text" id="user_id1" name="username"> 
+		<label for="user_pw1">비밀번호: </label> 
+		<input type="password" id="user_pw1" name="password">
 		<button type="submit">로그인하기</button>
 	</form>
 	<br>
